<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="DIALOG_title_common_mode"> </string>
    <string name="DIALOG_title_dir_mode">Dir selection</string>
    <string name="BUTTON_confirm_selection">Confirm selection</string>
    <string name="description_dialog_close_button">Close file selection dialog</string>
    <string name="description_sort_button">List sorting</string>
    <string name="description_create_dir_button">Create dir</string>
    <string name="description_back_button">Назад</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="dir_creator_dialog_create_button">Create</string>
    <string name="dir_creator_dialog_text_input_hint">Dir name</string>
    <string name="dir_creator_dialog_title">New dir</string>
    <string name="dir_was_created">Dir «%1$s» was created</string>

    <string name="dir_is_empty">Empty dir</string>

    <string name="sorting_mode_name">Name</string>
    <string name="sorting_mode_c_time">Crated</string>
    <string name="sorting_mode_m_time">Modified</string>
    <string name="sorting_mode_size">Size</string>

    <string name="SORTING_MODE_DIALOG_title">Sort by</string>

    <string name="sorting_flags_direct_order">Direct order</string>
    <string name="sorting_flags_reverse_order">Reverse order</string>
    <string name="sorting_flags_folders_first">Folders first</string>
    <string name="error">Error: %1$s</string>
    <string name="write_access_denied">Write access denied</string>

    <string name="internal_storage_title">Internal storage</string>
    <string name="external_storage_title">SD-card</string>
    <string name="storage_selector_spinner_prompt">Select storage</string>
    <string name="description_storage_list_storage_type_icon">Storage type icon</string>
    <string name="no_storage_info_available">Storage list unavailable</string>
    <string name="description_storage_icon">Storage icon</string>

    <string name="description_previous_page_button">Previous page</string>
    <string name="description_next_page_button">Next page</string>

    <string name="sorting_dialog_title">Sorting mode</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_apply">Apply</string>
</resources>

<!-- «» -->