<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:id="@+id/sortingDialogRootView">

    <RadioGroup
        android:id="@+id/sortingModeSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/sortingModeByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_mode_name"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/sortingModeBySize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_mode_size" />

        <RadioButton
            android:id="@+id/sortingModeByCTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_mode_c_time" />

        <RadioButton
            android:id="@+id/sortingModeByMTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sorting_mode_m_time" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/reverseOrderCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sorting_flags_reverse_order" />

        <CheckBox
            android:id="@+id/foldersFirstCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sorting_flags_folders_first" />
    </LinearLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_button_apply" />

</LinearLayout>